--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Program Files\\mysql-connector-java-5.1.46
 user.properties.file=C:\\Users\\LAB\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
