--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Estacionamento.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.46-bin.jar=..\\..\\..\\..\\..\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
+file.reference.mysql-connector-java-5.1.46-bin.jar-1=..\\..\\..\\..\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
