--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,7 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.46-bin.jar-1=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.45-bin.jar
-user.properties.file=C:\\Users\\LAB\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+do.depend=false
+do.jar=true
+file.reference.mysql-connector-java-5.1.46-bin.jar-1=C:\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Danilo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
